fix: Cambio y mejora de ortografia en la pagina

--- a/src/components/Acerca.astro
+++ b/src/components/Acerca.astro
@@ -7,7 +7,7 @@ import Bubble from "./Bubble.astro";
     <Bubble class="top-40 lg:top-72 left-0 bg-primary" classNameToBottom="bottom-80 right-36 bg-accent" />
     <div class="max-w-5xl">
       <div>
-        <h2 class="text-6xl font-bold mt-20 mb-36">Acerca de mi</h2>
+        <h2 class="text-6xl font-bold mt-20 mb-36">Acerca de mí</h2>
       </div>
 
       <div class="grid grid-cols-1 lg:grid-cols-4 lg:grid-rows-3 gap-4 ">
@@ -57,7 +57,7 @@ import Bubble from "./Bubble.astro";
         <div class="lg:col-span-2 lg:col-start-3">
           <div class="backdrop-blur-[19px] backdrop-saturate-[180%] border border-neutral-500 rounded-lg py-5 card">
             <div class="card-body">
-              <p class="font-medium">Desarrollador web trabajando en backend y frontend asi tambien como en las base de datos y despliegues de las paginas, un correcto control de versiones desde el CLI de Git y analisis de datos en Power BI. </p>
+              <p class="font-medium">Desarrollador web, trabajando en backend y frontend, así como en bases de datos y despliegue de páginas. Manejo adecuado del control de versiones desde la CLI de Git y análisis de datos en Power BI.</p>
             </div>
           </div>
         </div>
@@ -72,7 +72,7 @@ import Bubble from "./Bubble.astro";
             <div class="stat">
               <div class="stat-value">+7</div>
               <div class="">Proyectos</div>
-              <div class="stat-desc">Completados</div>
+              <div class="stat-desc">completados</div>
             </div>
             <div class="stat">
               <div class="stat-value">4+</div>
