--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,29 +1,21 @@
----
-interface Props {
-  title: string;
-}
-
-const { title } = Astro.props;
----
-
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{title}</title>
+    <title>Portafolio</title>
     <meta name="description" content="Portafolio muke78" />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://portafolio-vercel-deploy.vercel.app/" />
-    <meta property="og:title" content="{title}" />
+    <meta property="og:title" content="Porafolio" />
     <meta property="og:description" content="Landing Page para proyecto de banco e inversiones online" />
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://portafolio-vercel-deploy.vercel.app/" />
-    <meta property="twitter:title" content="{title}" />
+    <meta property="twitter:title" content="Porafolio" />
     <meta property="twitter:description" content="Landing Page para proyecto de banco e inversiones online" />
-    <meta property="twitter:image" content="https://portafolio-vercel-deploy.vercel.app/kdl.png" />
+    <meta property="twitter:image" content="https://portafolio-vercel-deploy.vercel.app/kdl.webp" />
     <!-- Otros metas importantes -->
     <meta name="theme-color" content="#6f37cf" />
     <!-- Asegúrate de que el color refleje tu marca -->
