--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Footer from "../components/Footer.astro";
 
 ---
 
-<Layout title="Portafolio">
+<Layout>
     <header class="relative max-w-screen-2x1 mx-auto">
         <Navbar/>
         <div id="inicio">
@@ -22,7 +22,7 @@ import Footer from "../components/Footer.astro";
         <div id="skills">
             <Habilidades/>
         </div>
-        <div id="proyects">
+        <div id="projects">
             <Proyectos/>
         </div>
         <div id="contact">
