--- a/src/utils/data.astro
+++ b/src/utils/data.astro
@@ -1,24 +1,25 @@
 ---
-    export const dataListNavbar = [
-        {
-            label: 'Inicio',
-            to: '#'
-        },
-        {
-            label: 'Acerca de',
-            to: '#about'
-        },
-        {
-            label: 'Hablidades',
-            to: '#skills'
-        },
-        {
-            label: 'Proyectos',
-            to: '#proyects'
-        },
-        {
-            label: 'Contacto',
-            to: '#contact'
-        }
-    ]
+   export const dataListNavbar = [
+    {
+        label: 'Inicio',
+        to: '#inicio'
+    },
+    {
+        label: 'Acerca de mí',
+        to: '#about'
+    },
+    {
+        label: 'Habilidades',
+        to: '#skills'
+    },
+    {
+        label: 'Proyectos',
+        to: '#projects'
+    },
+    {
+        label: 'Contacto',
+        to: '#contact'
+    }
+]
+
 ---
