--- a/src/utils/dataHabilidades.astro
+++ b/src/utils/dataHabilidades.astro
@@ -1,7 +1,7 @@
 ---
     export const dataSkills = [
         {
-            time: 'Mas de 2 años',
+            time: 'Más de 2 años',
             area: 'Frontend',
             title: 'Lenguajes y tecnologías principales',
             images: [
@@ -10,8 +10,8 @@
             ],
         },
         {
-            time: 'Mas de 1 año',
-            area: 'Libaries',
+            time: 'Más de 1 año',
+            area: 'Libraries',
             title: 'Frameworks y bibliotecas',
             images: [
                'https://go-skill-icons.vercel.app/api/icons?i=react,astro,sass',
@@ -19,7 +19,7 @@
             ]
         },
         {
-            time: 'Mas de 3 años',
+            time: 'Más de 3 años',
             area: 'Backend',
             title: 'Lenguajes y frameworks',
             images: [
@@ -28,7 +28,7 @@
             ]
         },
         {
-            time: 'Mas de 1 año',
+            time: 'Más de 1 año',
             area: 'Testing',
             title: 'Pruebas y testing',
             images: [
@@ -37,7 +37,7 @@
             ]
         },
         {
-            time: 'Mas de 3 años',
+            time: 'Más de 3 años',
             area: 'Interfaces',
             title: 'Componentes UI',
             images: [
@@ -46,7 +46,7 @@
             ]
         },
         {
-            time: 'Mas de 2 años',
+            time: 'Más de 2 años',
             area: 'Packages',
             title: 'Gestores de paquetes',
             images: [
@@ -66,7 +66,7 @@
             ]
         },
         {
-            time: 'Mas de 2 años',
+            time: 'Más de 2 años',
             area: 'Database and Tools',
             title: 'Bases de datos y herramientas',
             images: [
@@ -76,7 +76,7 @@
             ]
         },
         {
-            time: 'Mas de 2 años',
+            time: 'Más de 2 años',
             area: 'Services cloud',
             title: 'Alojamiento web',
             images: [
@@ -85,7 +85,7 @@
             ]
         },
         {
-            time: 'Mas de 2 años',
+            time: 'Más de 2 años',
             area: 'Data',
             title: 'Análisis de datos',
             images: [
@@ -93,7 +93,7 @@
             ]
         },
         {
-            time: 'Mas de 4 años',
+            time: 'Más de 4 años',
             area: 'Structure and design',
             title: 'Diseño y maquetado',
             images: [
