fix: Se incluyo la tecnologia en el footer, y SEO mejorado

--- a/src/components/Acerca.astro
+++ b/src/components/Acerca.astro
@@ -15,7 +15,7 @@ import Bubble from "./Bubble.astro";
         <div class="lg:col-span-2 lg:row-span-3">
           <div class="avatar px-3">
             <div class="ring-primary ring-offset-base-100 w-80 lg:w-96 rounded-full ring ring-offset-2">
-              <img src="/yop.webp" />
+              <img src="/yop.webp" alt="muke78"/>
             </div>
           </div>
 
