--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -7,7 +7,7 @@ import ItemsNavbar from "./ItemsNavbar.astro";
     <div class="flex-grow ">
         <div class="avatar">
             <a href="#inicio" class="w-12 rounded">
-                <img src="/kdl.webp" alt="kdl" aria-label="img">
+                <img src="/kdl.webp" alt="kdl" aria-label="Logotipo perosnal de Erick Gonzalez">
             </a>
         </div>
     </div>
