--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -34,6 +34,10 @@
       </svg>
       <br />
     </p>
+    <div class="flex justify-center items-center">
+      <p>Proyecto desarrollado con Astro</p>
+    </div>
+    <img src="/favicon.svg" alt="astro" class="w-16 fill-current">
     <p>Copyright © {new Date().getFullYear()} - All right reserved</p>
   </aside>
   <nav>
