fix and feat: Se agrega react para la migracion y se corrijen descripciones y medidas

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,8 +16,9 @@ import Bubble from './Bubble.astro';
         >Erick González</span
       >
       <p class="py-6 font-medium">
-        Experiencia en modelado y diseño de páginas web, así como herramientas o
-        aspectos enfocado en Frontend y Backend, análisis y base de datos.
+        Experiencia en el diseño y desarrollo de aplicaciones web, abarcando
+        tanto el frontend como el backend, además de un sólido manejo de
+        análisis de datos y bases de datos.
       </p>
       <a href="#about" class="btn btn-primary">Acerca de mi</a>
     </div>
