--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,15 +7,30 @@
     <meta name="description" content="Portafolio muke78" />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://portafolio-vercel-deploy.vercel.app/" />
+    <meta
+      property="og:url"
+      content="https://portafolio-vercel-deploy.vercel.app/"
+    />
     <meta property="og:title" content="Porafolio" />
-    <meta property="og:description" content="Landing Page para proyecto de banco e inversiones online" />
+    <meta
+      property="og:description"
+      content="Landing Page para proyecto de banco e inversiones online"
+    />
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://portafolio-vercel-deploy.vercel.app/" />
+    <meta
+      property="twitter:url"
+      content="https://portafolio-vercel-deploy.vercel.app/"
+    />
     <meta property="twitter:title" content="Porafolio" />
-    <meta property="twitter:description" content="Landing Page para proyecto de banco e inversiones online" />
-    <meta property="twitter:image" content="https://portafolio-vercel-deploy.vercel.app/kdl.webp" />
+    <meta
+      property="twitter:description"
+      content="Landing Page para proyecto de banco e inversiones online"
+    />
+    <meta
+      property="twitter:image"
+      content="https://portafolio-vercel-deploy.vercel.app/kdl.webp"
+    />
     <!-- Otros metas importantes -->
     <meta name="theme-color" content="#6f37cf" />
     <!-- Asegúrate de que el color refleje tu marca -->
@@ -34,22 +49,20 @@
   </body>
 </html>
 
-
 <style is:global>
-  
   html {
     scroll-behavior: smooth;
   }
 
   canvas {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100vh;
-      filter: blur(30px);
-    }
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    filter: blur(30px);
+  }
 
-  .hero{
+  .hero {
     view-timeline-name: --reveal;
     animation-name: show;
     animation-fill-mode: both;
@@ -60,16 +73,18 @@
     position: sticky;
     top: 0;
     height: 3px;
-    z-index: 10; 
+    z-index: 10;
   }
 
   @keyframes show {
-    from{
-      opacity: 0; scale: 10%;
+    from {
+      opacity: 0;
+      scale: 10%;
     }
 
-    to{
-      opacity: 1; scale: 100%;
+    to {
+      opacity: 1;
+      scale: 100%;
     }
   }
 </style>
