--- a/src/components/Acerca.astro
+++ b/src/components/Acerca.astro
@@ -1,21 +1,25 @@
 ---
-import Bubble from "./Bubble.astro";
+import Bubble from './Bubble.astro';
 ---
 
 <div class="hero bg-base-200 min-h-screen">
   <div class="hero-content text-center">
-    <Bubble class="top-40 lg:top-72 left-0 bg-primary" classNameToBottom="bottom-80 right-36 bg-accent" />
+    <Bubble
+      class="top-40 lg:top-72 left-0 bg-primary"
+      classNameToBottom="bottom-80 right-36 bg-accent"
+    />
     <div class="max-w-5xl">
       <div>
         <h2 class="text-6xl font-bold mt-20 mb-36">Acerca de mí</h2>
       </div>
 
-      <div class="grid grid-cols-1 lg:grid-cols-4 lg:grid-rows-3 gap-4 ">
-
+      <div class="grid grid-cols-1 lg:grid-cols-4 lg:grid-rows-2 gap-4">
         <div class="lg:col-span-2 lg:row-span-3">
           <div class="avatar px-3">
-            <div class="ring-primary ring-offset-base-100 w-80 lg:w-96 rounded-full ring ring-offset-2">
-              <img src="/yop.webp" alt="muke78"/>
+            <div
+              class="ring-primary ring-offset-base-100 w-80 lg:w-96 rounded-full ring ring-offset-2"
+            >
+              <img src="/yop.webp" alt="muke78" />
             </div>
           </div>
 
@@ -55,15 +59,28 @@ import Bubble from "./Bubble.astro";
         </div>
 
         <div class="lg:col-span-2 lg:col-start-3">
-          <div class="backdrop-blur-[19px] backdrop-saturate-[180%] border border-neutral-500 rounded-lg py-5 card">
+          <div
+            class="backdrop-blur-[19px] backdrop-saturate-[180%] border border-neutral-500 rounded-lg py-5 card"
+          >
             <div class="card-body">
-              <p class="font-medium">Desarrollador web, trabajando en backend y frontend, así como en bases de datos y despliegue de páginas. Manejo adecuado del control de versiones desde la CLI de Git y análisis de datos en Power BI.</p>
+              <p class="font-medium text-justify">
+                Soy un desarrollador web especializado en la
+                creación de aplicaciones completas desde el diseño de interfaces
+                hasta la implementación de lógica en el servidor. Tengo
+                experiencia en bases de datos y en el despliegue de
+                aplicaciones, asegurando un rendimiento óptimo y una experiencia
+                de usuario fluida. Además, domino el control de versiones a
+                través de Git y utilizo Power BI para el análisis de datos, lo
+                que me permite tomar decisiones informadas basadas en métricas.
+              </p>
             </div>
           </div>
         </div>
-         
+
         <div class="lg:col-span-2 lg:col-start-3 lg:row-start-2">
-          <div class="bg-transparent stats stats-horizontal backdrop-blur-[19px] backdrop-saturate-[180%] border border-neutral-500 rounded-lg py-5 w-full">
+          <div
+            class="bg-transparent stats stats-horizontal backdrop-blur-[19px] backdrop-saturate-[180%] border border-neutral-500 rounded-lg py-5 w-full"
+          >
             <div class="stat">
               <div class="stat-value">2+</div>
               <div class="">Años</div>
@@ -82,8 +99,14 @@ import Bubble from "./Bubble.astro";
           </div>
         </div>
 
-        <div class="lg:col-span-2 lg:col-start-3 lg:row-start-3">
-          <a download href="/CV_Erick_Miguel_Gonzalez_Rivera.pdf" class="btn btn-secondary w-full mt-9"> Descargar CV </a>
+        <div class="lg:col-span-2 lg:col-start-3 lg:row-start-2 lg:mt-44">
+          <a
+            download
+            href="/CV_Erick_Miguel_Gonzalez_Rivera.pdf"
+            class="btn btn-secondary w-full"
+          >
+            Descargar CV
+          </a>
         </div>
       </div>
     </div>
