--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,12 +7,13 @@ import Habilidades from "../components/Habilidades.astro";
 import Proyectos from "../components/Proyectos.astro";
 import Contacto from "../components/Contacto.astro";
 import Footer from "../components/Footer.astro";
+import Counter from '../components/Counter.jsx'
 
 ---
 
 <Layout>
     <header class="relative max-w-screen-2x1 mx-auto">
-        <Navbar/>
+            <Navbar data-aos="fade-in"/>
         <div id="inicio">
             <Header/>
         </div>
@@ -27,6 +28,7 @@ import Footer from "../components/Footer.astro";
         </div>
         <div id="contact">
             <Contacto/>
+            <!-- <Counter client:load/> -->
         </div>
         <Footer/>
     </header>
