fix: Se pulen pequenos detalles, se cambie LICENSE, version 1.0.0 finalizada

--- a/src/components/Acerca.astro
+++ b/src/components/Acerca.astro
@@ -63,7 +63,7 @@ import Bubble from './Bubble.astro';
             class="backdrop-blur-[19px] backdrop-saturate-[180%] border border-neutral-500 rounded-lg py-5 card"
           >
             <div class="card-body">
-              <p class="font-medium text-justify">
+              <p class="font-medium">
                 Soy un desarrollador web especializado en la
                 creación de aplicaciones completas desde el diseño de interfaces
                 hasta la implementación de lógica en el servidor. Tengo
