--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="scroll-smooth transition-colors duration-1000 ease-out">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -50,18 +50,6 @@
 </html>
 
 <style is:global>
-  html {
-    scroll-behavior: smooth;
-  }
-
-  canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    filter: blur(30px);
-  }
-
   .hero {
     view-timeline-name: --reveal;
     animation-name: show;
@@ -69,6 +57,7 @@
     animation-timeline: --reveal;
     animation-range: cover -50% entry 25%;
   }
+  
   .sticky-navbar {
     position: sticky;
     top: 0;
