fix and feat: Se mejora el rendimiento de la pagina, se agrega tanstack a las habilidades

--- a/src/components/Acerca.astro
+++ b/src/components/Acerca.astro
@@ -19,7 +19,7 @@ import Bubble from './Bubble.astro';
             <div
               class="ring-primary ring-offset-base-100 w-80 lg:w-96 rounded-full ring ring-offset-2"
             >
-              <img src="/yop.webp" alt="muke78" />
+              <img src="/yop.webp" alt="muke78" loading="lazy" />
             </div>
           </div>
 
@@ -64,14 +64,14 @@ import Bubble from './Bubble.astro';
           >
             <div class="card-body">
               <p class="font-medium">
-                Soy un desarrollador web especializado en la
-                creación de aplicaciones completas desde el diseño de interfaces
-                hasta la implementación de lógica en el servidor. Tengo
-                experiencia en bases de datos y en el despliegue de
-                aplicaciones, asegurando un rendimiento óptimo y una experiencia
-                de usuario fluida. Además, domino el control de versiones a
-                través de Git y utilizo Power BI para el análisis de datos, lo
-                que me permite tomar decisiones informadas basadas en métricas.
+                Soy un desarrollador web especializado en la creación de
+                aplicaciones completas desde el diseño de interfaces hasta la
+                implementación de lógica en el servidor. Tengo experiencia en
+                bases de datos y en el despliegue de aplicaciones, asegurando un
+                rendimiento óptimo y una experiencia de usuario fluida. Además,
+                domino el control de versiones a través de Git y utilizo Power
+                BI para el análisis de datos, lo que me permite tomar decisiones
+                informadas basadas en métricas.
               </p>
             </div>
           </div>
