--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,61 +1,87 @@
 ---
-import ThemeButton from "./theme/ThemeButton.astro";
-import ItemsNavbar from "./ItemsNavbar.astro";
+import ThemeButton from './theme/ThemeButton.astro';
+import ItemsNavbar from './ItemsNavbar.astro';
 ---
 
 <div class="navbar bg-base-100 px-5 sticky-navbar z-50">
-    <div class="flex-grow ">
-        <div class="avatar">
-            <a href="#inicio" class="w-12 rounded">
-                <img src="/kdl.webp" alt="kdl" aria-label="Logotipo perosnal de Erick Gonzalez">
-            </a>
-        </div>
-    </div>
-  
-    <div class="flex-none">
-      <label for="my-drawer-4" class="btn btn-ghost md:hidden drawer-button" aria-label="label">
-        <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block h-5 w-5 stroke-current">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
-        </svg>
-      </label>
-      <ul class="menu menu-horizontal md:flex hidden">
-       <ItemsNavbar/>
-      </ul>
-      <div class="list-none">
-        <ThemeButton/>
-      </div>
+  <div class="flex-grow">
+    <div class="avatar">
+      <a href="#inicio" class="w-12 rounded">
+        <img
+          src="/kdl.webp"
+          alt="kdl"
+          aria-label="Logotipo perosnal de Erick Gonzalez"
+          loading="lazy"
+        />
+      </a>
     </div>
   </div>
 
-  <div class="drawer drawer-end z-10">
-    <input id="my-drawer-4" type="checkbox" class="drawer-toggle" />
-    <div class="drawer-content">
-    </div>
-    <div class="drawer-side">
-      <label for="my-drawer-4" aria-label="close sidebar" class="drawer-overlay"></label>
-      <ul class="menu bg-base-200 text-base-content min-h-full w-80 p-4 z-50 relative">
-        <label for="my-drawer-4" class="absolute top-4 right-4 text-4xl cursor-pointer z-50" aria-label="Close">
-          &times;
-        </label>
-         <div class="flex flex-col mt-10">
-          <ItemsNavbar />
-         </div>
-      </ul>
+  <div class="flex-none">
+    <label
+      for="my-drawer-4"
+      class="btn btn-ghost md:hidden drawer-button"
+      aria-label="label"
+    >
+      <svg
+        width="20"
+        height="20"
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        class="inline-block h-5 w-5 stroke-current"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M4 6h16M4 12h16m-7 6h7"></path>
+      </svg>
+    </label>
+    <ul class="menu menu-horizontal md:flex hidden">
+      <ItemsNavbar />
+    </ul>
+    <div class="list-none">
+      <ThemeButton />
     </div>
   </div>
-  
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const savedTheme = localStorage.getItem('theme');
-      if (savedTheme) {
-        document.documentElement.setAttribute('data-theme', savedTheme);
-      }
-      document.querySelectorAll('[data-set-theme]').forEach(button => {
-        button.addEventListener('click', () => {
-          const theme = button.getAttribute('data-set-theme');
-          localStorage.setItem('theme', theme);
-          document.documentElement.setAttribute('data-theme', theme);
-        });
+</div>
+
+<div class="drawer drawer-end z-10">
+  <input id="my-drawer-4" type="checkbox" class="drawer-toggle" />
+  <div class="drawer-content"></div>
+  <div class="drawer-side">
+    <label for="my-drawer-4" aria-label="close sidebar" class="drawer-overlay"
+    ></label>
+    <ul
+      class="menu bg-base-200 text-base-content min-h-full w-80 p-4 z-50 relative"
+    >
+      <label
+        for="my-drawer-4"
+        class="absolute top-4 right-4 text-4xl cursor-pointer z-50"
+        aria-label="Close"
+      >
+        &times;
+      </label>
+      <div class="flex flex-col mt-10">
+        <ItemsNavbar />
+      </div>
+    </ul>
+  </div>
+</div>
+
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const savedTheme = localStorage.getItem('theme');
+    if (savedTheme) {
+      document.documentElement.setAttribute('data-theme', savedTheme);
+    }
+    document.querySelectorAll('[data-set-theme]').forEach((button) => {
+      button.addEventListener('click', () => {
+        const theme = button.getAttribute('data-set-theme');
+        localStorage.setItem('theme', theme);
+        document.documentElement.setAttribute('data-theme', theme);
       });
     });
-  </script>
+  });
+</script>
