feat: Se crea el boton de idiomas con la configuracion i18n

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,6 +1,7 @@
 ---
 import ThemeButton from './theme/ThemeButton.astro';
 import ItemsNavbar from './ItemsNavbar.astro';
+import LangPicker from '../components/LangPicker.astro';
 ---
 
 <div class="navbar bg-base-100 px-5 sticky-navbar z-50">
@@ -43,6 +44,9 @@ import ItemsNavbar from './ItemsNavbar.astro';
     </ul>
     <div class="list-none">
       <ThemeButton />
+    </div>
+    <div class="pl-2">
+      <LangPicker />
     </div>
   </div>
 </div>
