fix and feat: Se cambio el diseño del navbar, se mejora la vista del usuario

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,7 +43,10 @@
     <link rel="canonical" href="https://portafolio-vercel-deploy.vercel.app/" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <script is:inline src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
+    <script
+      is:inline
+      src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"
+    ></script>
   </head>
   <body>
     <slot />
@@ -53,8 +56,8 @@
 <style is:global>
   html {
     transition:
-      background-color 1.2s ease-out,
-      color 1.2s ease-out;
+      background-color 0.4s ease-out,
+      color 0.7s ease-out;
   }
 
   .hero {
@@ -69,7 +72,6 @@
     position: sticky;
     top: 0;
     height: 3px;
-    z-index: 10;
   }
 
   @keyframes show {
