--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,15 +3,15 @@ const v = import.meta.env.VERSION;
 ---
 
 <footer
-  class="footer footer-center bg-gradient-to-tl from-primary to-accent backdrop-blur-[30px] backdrop-saturate-[180%] rounded-sm card text-base-100 p-10"
+  class="footer footer-center bg-gradient-to-tl from-primary to-accent backdrop-blur-[30px] backdrop-saturate-[180%] rounded-t-lg text-base-100 p-7"
 >
   <aside>
     <div>
       <div class="text-2xl font-bold leading-4 text-base-100">KHE</div>
       <div class="text-2xl font-bold text-base-100">LDE</div>
     </div>
-    <p class="font-bold flex">
-      Made with
+    <p class="font-bold flex items-center justify-center">
+      Hecho con
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="1.2em"
@@ -23,11 +23,11 @@ const v = import.meta.env.VERSION;
           d="m12 21.35l-1.45-1.32C5.4 15.36 2 12.27 2 8.5C2 5.41 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.08C13.09 3.81 14.76 3 16.5 3C19.58 3 22 5.41 22 8.5c0 3.77-3.4 6.86-8.55 11.53z"
         ></path>
       </svg>
-      and &nbsp;
+      y &nbsp;
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="1.2em"
-        height="1.2em"
+        height="1em"
         viewBox="0 0 24 24"
       >
         <path
@@ -40,9 +40,9 @@ const v = import.meta.env.VERSION;
     <div class="flex justify-center items-center">
       <p>Proyecto desarrollado con Astro</p>
     </div>
-    <div class="flex justify-center items-center flex-row-reverse">
+    <div class="flex justify-center items-center flex-col">
+      <img src="/favicon.svg" alt="astro" class="w-11 fill-current" />
       <p class="font-semibold">Version {v}</p>
-      <img src="/favicon.svg" alt="astro" class="w-16 fill-current" />
     </div>
     <p>Copyright © {new Date().getFullYear()} - All right reserved</p>
   </aside>
