--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,12 +20,31 @@ import Bubble from './Bubble.astro';
         tanto el frontend como el backend, además de un sólido manejo de
         análisis de datos y bases de datos.
       </p>
-      <a href="#about" class="btn btn-primary">Acerca de mi</a>
+      <a href="#about" class="btn btn-primary border-none bg-gradient-to-r from-primary to-accent">
+        <svg
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          width="16"
+          height="16"
+          viewBox="0 0 24 24"
+          fill="currentColor"
+          style="--sl-icon-size: 0.5em;"
+        >
+          <path
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="m19 9l-7 6l-7-6"></path>
+        </svg>
+        Acerca de mi</a
+      >
     </div>
   </div>
   <svg
     id="svg"
-    class="absolute top-30 bottom-0 opacity-0.4 fill-current" 
+    class="absolute top-30 bottom-0 opacity-0.4 fill-current"
     viewBox="0 0 1440 490"
     xmlns="http://www.w3.org/2000/svg"
   >
@@ -40,7 +59,7 @@ import Bubble from './Bubble.astro';
     <path
       d="M 0,600 L 0,150 C 139.53571428571428,190.60714285714286 279.07142857142856,231.21428571428572 408,220 C 536.9285714285714,208.78571428571428 655.2500000000001,145.75 772,125 C 888.7499999999999,104.25000000000001 1003.9285714285713,125.7857142857143 1115,137 C 1226.0714285714287,148.2142857142857 1333.0357142857142,149.10714285714283 1440,150 L 1440,600 L 0,600 Z"
       fill="url(#gradient)"
-      fill-opacity="0.4"
+      fill-opacity="0.3"
       class="transition-all duration-300 ease-in-out delay-150 path-0"></path>
 
     <defs>
@@ -54,7 +73,7 @@ import Bubble from './Bubble.astro';
     <path
       d="M 0,600 L 0,350 C 104.96428571428572,363.8571428571429 209.92857142857144,377.7142857142857 331,395 C 452.07142857142856,412.2857142857143 589.2500000000001,433 717,417 C 844.7499999999999,401 963.0714285714284,348.28571428571433 1082,331 C 1200.9285714285716,313.71428571428567 1320.4642857142858,331.85714285714283 1440,350 L 1440,600 L 0,600 Z"
       fill="url(#gradient2)"
-      fill-opacity="1"
+      fill-opacity="0.7"
       class="transition-all duration-300 ease-in-out delay-150 path-1"></path>
   </svg>
 </div>
