--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -1,4 +1,4 @@
----
+<!-- ---
 import { reposDeseados } from '../utils/dataRepoPinned.astro';
 import Bubble from './Bubble.astro';
 
@@ -75,4 +75,4 @@ repos = repos.filter(repo => reposDeseados.includes(repo.name));
       </div>
     </div>
   </div>
-</div>
+</div> -->
