--- a/src/components/theme/ThemeButton.astro
+++ b/src/components/theme/ThemeButton.astro
@@ -5,7 +5,7 @@ import { dataColorTheme } from '../../utils/dataColorsTheme.astro';
 <button
   id="dropdownDefaultButton"
   data-dropdown-toggle="dropdownLang"
-  class="btn px-3"
+  class="btn btn-sm btn-ghost hover:btn-outline px-3"
   type="button"
 >
   <svg
