--- a/src/components/pages/Header.astro
+++ b/src/components/pages/Header.astro
@@ -1,10 +1,9 @@
 ---
+import { getI18N } from '../../i18n';
 import Bubble from '../Bubble.astro';
 
-import { getLangFromUrl, useTranslations } from '../../i18n/utils';
-
-const lang = getLangFromUrl(Astro.url);
-const t = useTranslations(lang);
+const { currentLocale } = Astro;
+const i18n = getI18N({ currentLocale });
 ---
 
 <div class="hero bg-base-300 min-h-screen">
@@ -14,15 +13,14 @@ const t = useTranslations(lang);
       <h1
         class="text-6xl xl:text-8xl lg:text-8x1 md:text-6xl sm:text-4xl font-bold"
       >
-       {t('header.title')}
+        {i18n.HEADER.HEADER_TITLE}
       </h1>
       <span
         class="text-7xl xl:text-8xl lg:text-8x1 md:text-6xl sm:text-4xl leading-snug font-bold bg-clip-text text-transparent bg-gradient-to-r from-primary via-secondary to-accent"
-        >Erick González</span
       >
-      <p class="py-6 font-medium">
-        {t('header.about')}
-      </p>
+        {i18n.HEADER.HEADER_NAME}
+      </span>
+      <p class="py-6 font-medium">{i18n.HEADER.HEADER_ABOUT}</p>
       <a
         href="#about"
         class="btn btn-primary border-none bg-gradient-to-r from-primary to-accent"
@@ -44,7 +42,7 @@ const t = useTranslations(lang);
             stroke-width="2"
             d="m19 9l-7 6l-7-6"></path>
         </svg>
-        Acerca de mi</a
+        {i18n.HEADER.HEADER_BUTTON}</a
       >
     </div>
   </div>
