--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -2,7 +2,7 @@
 import { StrictMode } from 'react';
 import Layout from '../../layouts/Layout.astro';
 import Navbar from '../../components/Navbar.astro';
-import Header from '../../components/pages/Header.astro';
+import Header from '../../components/Header.astro';
 import Acerca from '../../components/Acerca.astro';
 import Habilidades from '../../components/Habilidades.astro';
 import Proyectos from '../../components/Proyectos.astro';
