--- a/src/components/Habilidades.astro
+++ b/src/components/Habilidades.astro
@@ -1,6 +1,12 @@
 ---
+import { getI18N } from '../i18n';
 import { dataSkills } from '../utils/dataHabilidades.astro';
+import { dataSkillsEN } from '../utils/dataHabilidadesEn.astro';
 import Bubble from './Bubble.astro';
+
+const { currentLocale } = Astro;
+let dataChange;
+dataChange = currentLocale === 'es' ? dataSkills : dataSkillsEN;
 ---
 
 <div class="hero bg-base-200 min-h-screen">
@@ -21,7 +27,7 @@ import Bubble from './Bubble.astro';
             class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 lg:mx-0 lg:max-w-none lg:grid-cols-3 md:grid-cols-2"
           >
             {
-              dataSkills.map(({ time, area, title, images }) => (
+              dataChange.map(({ time, area, title, images }) => (
                 <article class="flex max-w-xl flex-col items-start justify-between">
                   <div class="flex items-center gap-x-4 text-xs">
                     <time>{time}</time>
