--- a/src/components/LangPicker.astro
+++ b/src/components/LangPicker.astro
@@ -1,5 +1,9 @@
 ---
+import { getI18N } from '../i18n';
 import { languages } from '../i18n/ui';
+
+const { currentLocale } = Astro;
+const i18n = getI18N({ currentLocale });
 ---
 
 <button
@@ -22,7 +26,7 @@ import { languages } from '../i18n/ui';
       d="M8.516 3a.94.94 0 0 0-.941.94v1.15H2.94a.94.94 0 1 0 0 1.882h7.362a7.422 7.422 0 0 1-1.787 3.958 7.42 7.42 0 0 1-1.422-2.425.94.94 0 1 0-1.774.627 9.303 9.303 0 0 0 1.785 3.043 7.422 7.422 0 0 1-4.164 1.278.94.94 0 1 0 0 1.881 9.303 9.303 0 0 0 5.575-1.855 9.303 9.303 0 0 0 4.11 1.74l-.763 1.525a.968.968 0 0 0-.016.034l-1.385 2.77a.94.94 0 1 0 1.683.841l1.133-2.267h5.806l1.134 2.267a.94.94 0 0 0 1.683-.841l-1.385-2.769a.95.95 0 0 0-.018-.036l-3.476-6.951a.94.94 0 0 0-1.682 0l-1.82 3.639a7.423 7.423 0 0 1-3.593-1.256 9.303 9.303 0 0 0 2.27-5.203h1.894a.94.94 0 0 0 0-1.881H9.456V3.94A.94.94 0 0 0 8.516 3Zm6.426 11.794a1.068 1.068 0 0 1-.02.039l-.703 1.407h3.924l-1.962-3.924-1.24 2.478Z"
       clip-rule="evenodd"></path></svg
   >
-  <span class="hidden md:inline"> Idiomas </span>
+  <span class="hidden md:inline"> {i18n.LANGUAGES.BUTTON_LABEL} </span>
 
   <svg
     class="w-2.5 h-2.5 ms-3"
@@ -41,15 +45,15 @@ import { languages } from '../i18n/ui';
 </button>
 
 <!-- Dropdown menu -->
-<div id="dropdownTheme" class="z-10 hidden bg-base-content rounded-lg shadow w-44">
+<div
+  id="dropdownTheme"
+  class="z-10 hidden bg-base-content rounded-lg shadow w-44"
+>
   <ul class="py-2 text-base-300" aria-labelledby="dropdownDefaultButton">
     {
       Object.entries(languages).map(([code, { label, img }]) => (
         <li>
-          <a
-            href={`/${code}/`}
-            class="block px-4 py-2 text-base font-semibold"
-          >
+          <a href={`/${code}/`} class="block px-4 py-2 text-base font-semibold">
             <img
               src={`${img.src}`}
               alt={`${label} flag`}
