--- a/src/components/Habilidades.astro
+++ b/src/components/Habilidades.astro
@@ -5,6 +5,7 @@ import { dataSkillsEN } from '../utils/dataHabilidadesEn.astro';
 import Bubble from './Bubble.astro';
 
 const { currentLocale } = Astro;
+const i18n = getI18N({ currentLocale });
 let dataChange;
 dataChange = currentLocale === 'es' ? dataSkills : dataSkillsEN;
 ---
@@ -17,7 +18,9 @@ dataChange = currentLocale === 'es' ? dataSkills : dataSkillsEN;
     />
     <div class="max-w-5xl">
       <div>
-        <h2 class="text-6xl font-bold mb-32 mt-20">Habilidades</h2>
+        <h2 class="text-6xl font-bold mb-32 mt-20">
+          {i18n.SKILLS.SKILLS_TITLE}
+        </h2>
       </div>
       <div
         class="backdrop-blur-[19px] backdrop-saturate-[180%] border border-neutral-700 rounded-lg py-5 card"
