--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -1,4 +1,5 @@
-<!-- ---
+---
+import { getI18N } from '../i18n';
 import { reposDeseados } from '../utils/dataRepoPinned.astro';
 import Bubble from './Bubble.astro';
 
@@ -6,6 +7,9 @@ const GITHUB_API_URL = import.meta.env.GITHUB_API_URL;
 const response = await fetch(GITHUB_API_URL);
 let repos = await response.json();
 repos = repos.filter(repo => reposDeseados.includes(repo.name));
+
+const { currentLocale } = Astro;
+const i18n = getI18N({ currentLocale });
 ---
 
 <div class="hero bg-base-200 min-h-screen">
@@ -16,7 +20,7 @@ repos = repos.filter(repo => reposDeseados.includes(repo.name));
     />
     <div class="max-w-5xl">
       <div>
-        <h2 class="text-6xl font-bold mb-32 mt-20">Proyectos</h2>
+        <h2 class="text-6xl font-bold mb-32 mt-20">{i18n.PROJECTS.PROJECTS_TITLE}</h2>
       </div>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
         {
@@ -75,4 +79,4 @@ repos = repos.filter(repo => reposDeseados.includes(repo.name));
       </div>
     </div>
   </div>
-</div> -->
+</div>
