fix and feat: Se agrega el soporte para iPad Mini y iPad Air, se cambia el select de versiones

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,12 +11,12 @@ const i18n = getI18N({ currentLocale });
     <Bubble />
     <div class="max-w-lg">
       <h1
-        class="text-6xl xl:text-8xl lg:text-8x1 md:text-6xl sm:text-4xl font-bold"
+        class="text-6xl xl:text-8xl lg:text-8x1 md:text-6xl font-bold"
       >
         {i18n.HEADER.HEADER_TITLE}
       </h1>
       <span
-        class="text-7xl xl:text-8xl lg:text-8x1 md:text-6xl sm:text-4xl leading-snug font-bold bg-clip-text text-transparent bg-gradient-to-r from-primary via-secondary to-accent"
+        class="text-7xl xl:text-8xl lg:text-8x1 md:text-6xl leading-snug font-bold bg-clip-text text-transparent bg-gradient-to-r from-primary via-secondary to-accent"
       >
         {i18n.HEADER.HEADER_NAME}
       </span>
