--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -25,7 +25,7 @@ import { VersionSelect } from './version/ButtonVersion.jsx';
   <div class="flex-none">
     <label
       for="my-drawer-4"
-      class="btn btn-ghost md:hidden drawer-button"
+      class="btn btn-ghost min-[920px]:hidden drawer-button"
       aria-label="label"
     >
       <svg
@@ -43,7 +43,7 @@ import { VersionSelect } from './version/ButtonVersion.jsx';
           d="M4 6h16M4 12h16m-7 6h7"></path>
       </svg>
     </label>
-    <ul class="menu menu-horizontal md:flex hidden">
+    <ul class="menu menu-horizontal min-[920px]:flex hidden">
       <ItemsNavbar />
     </ul>
     <div class="list-none">
